Added /nifty command that shows plugins using NiftyBukkit as well as their enabled status, version, error count from loggers, plugins, commands and listeners using the nifty classes

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -5,3 +5,15 @@ author: Brian Graham (CraftedFury)
 
 main: net.netcoding.niftybukkit.NiftyBukkit
 softdepend: [Vault, ProtocolLib]
+
+commands:
+  nifty:
+    description: Show status of plugins using NiftyBukkit
+    usage: /<command> [page|plugin]
+
+permissions:
+  niftybukkit.*:
+    description: Gives access to all plugin commands
+    children:
+      niftybukkit.nifty:
+        description: Show status of plugins using NiftyBukkit
