--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
+	<packaging>jar</packaging>
 	<artifactId>niftybukkit</artifactId>
-
 	<name>NiftyBukkit</name>
-	<version>3.3.7</version>
+	<version>3.4.0</version>
 	<url>https://netcoding.net/</url>
 	<description>Extended Bukkit API with support from 1.7.10 through latest versions.</description>
 
@@ -23,12 +21,22 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jdk.version>1.7</jdk.version>
+		<author>Brian Graham (CraftedFury)</author>
 	</properties>
 
 	<repositories>
 		<repository>
+			<id>shadowvolt-repo</id>
+			<url>http://ci.shadowvolt.com/plugin/repository/everything</url>
+		</repository>
+		<repository>
+			<id>vault-repo</id>
+			<url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
+		</repository>
+		<repository>
 			<id>spigot-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+			<url>https://hub.spigotmc.org/nexus/content/groups/public</url>
 		</repository>
 	</repositories>
 
@@ -49,14 +57,34 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<groupId>net.netcoding</groupId>
 			<artifactId>niftycore</artifactId>
 			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.comphenix.protocol</groupId>
+			<artifactId>ProtocolLib</artifactId>
+			<version>3.6.3-SNAPSHOT</version>
+			<optional>true</optional>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.milkbowl.vault</groupId>
+			<artifactId>Vault</artifactId>
+			<version>1.5.3</version>
+			<optional>true</optional>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
 	<build>
-		<!-- <sourceDirectory>src</sourceDirectory> -->
-		<finalName>${project.name}</finalName>
 		<defaultGoal>clean install</defaultGoal>
+		<finalName>${project.name}-ORIGINAL</finalName>
+
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -66,31 +94,30 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>1.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                        	<relocations>
-                        		<relocation>
-                        			<pattern>niftycore</pattern>
-                        			<shadedPattern>net.netcoding.niftybukkit</shadedPattern>
-                        		</relocation>
-                        	</relocations>
-                            <minimizeJar>true</minimizeJar>
-                            <createDependencyReducedPom>true</createDependencyReducedPom>
-                            <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <finalName>${project.name}</finalName>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>1.4</version>
+					<executions>
+						<execution>
+							<phase>package</phase>
+							<goals>
+								<goal>shade</goal>
+							</goals>
+							<configuration>
+								<relocations>
+									<relocation>
+										<pattern>${project.parent.groupId}.${project.parent.artifactId}</pattern>
+										<shadedPattern>${project.parent.groupId}.${project.artifactId}</shadedPattern>
+									</relocation>
+								</relocations>
+								<createDependencyReducedPom>true</createDependencyReducedPom>
+								<shadedArtifactAttached>true</shadedArtifactAttached>
+								<finalName>${project.name}</finalName>
+							</configuration>
+						</execution>
+				   </executions>
+			   </plugin>
 		</plugins>
 	</build>
 </project>
