--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>jar</packaging>
+	<groupId>net.netcoding</groupId>
 	<artifactId>niftybukkit</artifactId>
 	<name>NiftyBukkit</name>
 	<version>3.4.0</version>
@@ -12,12 +13,6 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<name>Net Coding</name>
 		<url>https://netcoding.net/</url>
 	</organization>
-
-	<parent>
-		<groupId>net.netcoding</groupId>
-		<artifactId>niftycore</artifactId>
-		<version>1.0.0</version>
-	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -107,8 +102,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 							<configuration>
 								<relocations>
 									<relocation>
-										<pattern>${project.parent.groupId}.${project.parent.artifactId}</pattern>
-										<shadedPattern>${project.parent.groupId}.${project.artifactId}</shadedPattern>
+										<pattern>${project.groupId}.niftycore</pattern>
+										<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
 									</relocation>
 								</relocations>
 								<createDependencyReducedPom>true</createDependencyReducedPom>
