--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
 	<build>
 		<defaultGoal>clean install</defaultGoal>
-		<finalName>${project.name}-ORIGINAL</finalName>
+		<finalName>${project.name}-${project.version}-ORIGINAL</finalName>
 
 		<resources>
 			<resource>
