Fixed to use the NiftyParent pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -1,47 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<packaging>jar</packaging>
-	<groupId>net.netcoding</groupId>
 	<artifactId>niftybukkit</artifactId>
 	<name>NiftyBukkit</name>
 	<version>3.4.0</version>
 	<url>https://netcoding.net/</url>
 	<description>Extended Bukkit API with support from 1.7.10 through latest versions.</description>
 
-	<organization>
-		<name>Net Coding</name>
-		<url>https://netcoding.net/</url>
-	</organization>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jdk.version>1.7</jdk.version>
-		<author>Brian Graham (CraftedFury)</author>
-	</properties>
-
-	<repositories>
-		<repository>
-			<id>netcoding-repo</id>
-			<url>https://nexus.netcoding.net/content/groups/public</url>
-		</repository>
-	</repositories>
-
-	<distributionManagement>
-		<repository>
-			<id>netcoding-repo</id>
-			<name>Releases</name>
-			<url>https://nexus.netcoding.net/content/repositories/releases</url>
-		</repository>
-	</distributionManagement>
+	<parent>
+		<groupId>net.netcoding</groupId>
+		<artifactId>niftyparent</artifactId>
+		<version>1.0.0</version>
+	</parent>
 
 	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
@@ -70,49 +42,28 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	</dependencies>
 
 	<build>
-		<defaultGoal>clean install</defaultGoal>
-		<finalName>${project.name}-${project.version}-ORIGINAL</finalName>
-
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>1.4</version>
-					<executions>
-						<execution>
-							<phase>package</phase>
-							<goals>
-								<goal>shade</goal>
-							</goals>
-							<configuration>
-								<relocations>
-									<relocation>
-										<pattern>${project.groupId}.niftycore</pattern>
-										<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
-									</relocation>
-								</relocations>
-								<createDependencyReducedPom>true</createDependencyReducedPom>
-								<shadedArtifactAttached>true</shadedArtifactAttached>
-								<finalName>${project.name}</finalName>
-							</configuration>
-						</execution>
-				   </executions>
-			   </plugin>
+				<executions>
+					<execution>
+						<configuration>
+							<relocations>
+								<relocation>
+									<pattern>com.google</pattern>
+									<shadedPattern>${project.groupId}.${project.artifactId}.util</shadedPattern>
+								</relocation>
+								<relocation>
+									<pattern>${project.groupId}.niftycore</pattern>
+									<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
+								</relocation>
+							</relocations>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
