--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.8-R0.1-SNAPSHOT</version>
+			<version>1.8.3-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -52,8 +52,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 						<configuration>
 							<relocations>
 								<relocation>
-									<pattern>com.google</pattern>
-									<shadedPattern>${project.groupId}.${project.artifactId}.util</shadedPattern>
+									<pattern>com.google.gson</pattern>
+									<shadedPattern>${project.groupId}.${project.artifactId}.util.gson</shadedPattern>
 								</relocation>
 								<relocation>
 									<pattern>${project.groupId}.niftycore</pattern>
