Don't relocate NiftyCore

--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,15 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
 	<dependencies>
 		<dependency>
+			<groupId>net.netcoding</groupId>
+			<artifactId>niftycore</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
 			<version>1.8.3-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.netcoding</groupId>
-			<artifactId>niftycore</artifactId>
-			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.comphenix.protocol</groupId>
@@ -53,11 +53,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 							<relocations>
 								<relocation>
 									<pattern>com.google.gson</pattern>
-									<shadedPattern>${project.groupId}.${project.artifactId}.util.gson</shadedPattern>
-								</relocation>
-								<relocation>
-									<pattern>${project.groupId}.niftycore</pattern>
-									<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
+									<shadedPattern>${project.groupId}.${project.dependencies[0].artifactId}.util.gson</shadedPattern>
 								</relocation>
 							</relocations>
 						</configuration>
