Now uses craftbukkit instead of bukkit

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<dependencies>
 		<dependency>
 			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
+			<artifactId>craftbukkit</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
