--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<parent>
 		<groupId>net.netcoding</groupId>
 		<artifactId>niftyparent</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1</version>
 	</parent>
+
+	<properties>
+		<skip-copy>false</skip-copy>
+	</properties>
 
 	<dependencies>
 		<dependency>
