--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,19 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>niftybukkit</artifactId>
 	<name>NiftyBukkit</name>
-	<version>3.4.2</version>
+	<version>3.4.3</version>
 	<url>https://netcoding.net/</url>
 	<description>Extended Bukkit API with support from 1.7.10 through latest versions.</description>
 
 	<parent>
 		<groupId>net.netcoding</groupId>
 		<artifactId>niftyparent</artifactId>
-		<version>1.0.2</version>
+		<version>1.0.3</version>
 	</parent>
 
 	<properties>
 		<skip-copy>false</skip-copy>
+		<minecraft.provider>bukkit</minecraft.provider>
 	</properties>
 
 	<dependencies>
@@ -30,14 +31,14 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<dependency>
 			<groupId>com.comphenix.protocol</groupId>
 			<artifactId>ProtocolLib</artifactId>
-			<version>3.6.3-SNAPSHOT</version>
+			<version>4.0.0-SNAPSHOT</version>
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>Vault</artifactId>
-			<version>1.5.3</version>
+			<version>1.5.6</version>
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
