Migrating to new API-based system

--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,22 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<minecraft.provider>bukkit</minecraft.provider>
 	</properties>
 
+	<modules>
+		<module>API</module>
+		<module>Sponge</module>
+	</modules>
+
 	<dependencies>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>craftbukkit</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>net.netcoding</groupId>
 			<artifactId>niftycore</artifactId>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>com.comphenix.protocol</groupId>
 			<artifactId>ProtocolLib</artifactId>
 			<version>4.0.1-SNAPSHOT</version>
@@ -41,6 +46,6 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<version>1.5.6</version>
 			<scope>provided</scope>
 			<optional>true</optional>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 </project>
