--- a/Sponge/pom.xml
+++ b/Sponge/pom.xml
@@ -2,14 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <artifactId>niftysponge</artifactId>
+
     <parent>
         <artifactId>niftybukkit</artifactId>
         <groupId>net.netcoding</groupId>
         <version>3.4.3</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>niftysponge</artifactId>
-
-
+    <properties>
+        <skip-copy>true</skip-copy>
+    </properties>
 </project>
