--- a/Bukkit/pom.xml
+++ b/Bukkit/pom.xml
@@ -1,21 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>niftyapi</artifactId>
-    <name>NiftyBukkit</name>
+    <artifactId>niftybukkit</artifactId>
+    <name>NiftyBukkit-Common</name>
+    <version>3.5.0</version>
 
     <parent>
         <groupId>net.netcoding</groupId>
-        <artifactId>niftybukkit</artifactId>
-        <version>3.4.3</version>
+        <artifactId>niftyapi</artifactId>
+        <version>1.0.0</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
+            <version>${minecraft.version.minor}-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
