--- a/CraftBukkit/pom.xml
+++ b/CraftBukkit/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>niftysponge</artifactId>
-	<name>NiftySponge</name>
+	<artifactId>niftycraftbukkit</artifactId>
+	<name>NiftyCraftBukkit</name>
 	<version>1.0.0</version>
 
 	<parent>
@@ -11,20 +11,15 @@
 		<version>1.0.0</version>
 	</parent>
 
-	<properties>
-		<jdk.version>1.8</jdk.version>
-		<minecraft.provider>sponge</minecraft.provider>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>net.netcoding</groupId>
 			<artifactId>niftybukkit</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.spongepowered</groupId>
-			<artifactId>spongeapi</artifactId>
-			<version>4.1.0-SNAPSHOT</version>
+			<groupId>org.bukkit</groupId>
+			<artifactId>craftbukkit</artifactId>
+			<version>${minecraft.version.minor}-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
