--- a/Main/pom.xml
+++ b/Main/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>niftysponge</artifactId>
-	<name>NiftySponge</name>
+	<artifactId>niftymain</artifactId>
+	<name>NiftyBukkit</name>
 	<version>1.0.0</version>
 
 	<parent>
@@ -12,8 +12,7 @@
 	</parent>
 
 	<properties>
-		<jdk.version>1.8</jdk.version>
-		<minecraft.provider>sponge</minecraft.provider>
+		<skip-copy>false</skip-copy>
 	</properties>
 
 	<dependencies>
@@ -22,10 +21,14 @@
 			<artifactId>niftybukkit</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.spongepowered</groupId>
-			<artifactId>spongeapi</artifactId>
-			<version>4.1.0-SNAPSHOT</version>
-			<scope>provided</scope>
+			<groupId>net.netcoding</groupId>
+			<artifactId>niftycraftbukkit</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.netcoding</groupId>
+			<artifactId>niftysponge</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 </project>
