--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
-	<artifactId>niftybukkit</artifactId>
-	<name>NiftyBukkit</name>
-	<version>3.4.3</version>
+	<artifactId>niftyapi</artifactId>
+	<name>NiftyAPI</name>
+	<version>1.0.0</version>
 	<url>https://netcoding.net/</url>
 	<description>Extended Bukkit API with support from 1.7.10 through latest versions.</description>
 
 	<parent>
 		<groupId>net.netcoding</groupId>
 		<artifactId>niftyparent</artifactId>
-		<version>1.0.3</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<properties>
@@ -20,8 +20,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	</properties>
 
 	<modules>
-		<module>API</module>
+		<module>Bukkit</module>
+		<module>CraftBukkit</module>
 		<module>Sponge</module>
+		<module>Main</module>
 	</modules>
 
 	<dependencies>
@@ -29,19 +31,5 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<groupId>net.netcoding</groupId>
 			<artifactId>niftycore</artifactId>
 		</dependency>
-		<!--<dependency>
-			<groupId>com.comphenix.protocol</groupId>
-			<artifactId>ProtocolLib</artifactId>
-			<version>4.0.1-SNAPSHOT</version>
-			<scope>provided</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>net.milkbowl.vault</groupId>
-			<artifactId>Vault</artifactId>
-			<version>1.5.6</version>
-			<scope>provided</scope>
-			<optional>true</optional>
-		</dependency>-->
 	</dependencies>
 </project>
