--- a/Main/pom.xml
+++ b/Main/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>niftymain</artifactId>
-	<name>NiftyLib</name>
+	<name>NiftyLibrary</name>
 
 	<parent>
 		<groupId>net.netcoding.nifty</groupId>
@@ -12,6 +12,7 @@
 
 	<properties>
 		<skip-copy>false</skip-copy>
+		<minecraft.provider>minecraft</minecraft.provider>
 	</properties>
 
 	<dependencies>
