Added build directory

--- a/CraftBukkit/pom.xml
+++ b/CraftBukkit/pom.xml
@@ -11,6 +11,10 @@
 		<version>4.0.0</version>
 	</parent>
 
+	<properties>
+		<minecraft.provider>minecraft</minecraft.provider>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>net.netcoding.nifty</groupId>
