--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -11,10 +11,19 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <version>4.0.0</version>
     </parent>
 
+    <properties>
+        <minecraft.provider>minecraft</minecraft.provider>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
